// Version
syntax = "proto3";

// Package name
option go_package = "github.com/nanthaphol2/bigdobshop-micro";

// Structures
message FindCartsInIdsReq {
    repeated string ids = 1;
}

message FindCartsInIdsRes {
    repeated Cart carts = 1;
}

message Cart {
    string id = 1;
    string title = 2;
    double price = 3;
    string imageUrl = 4;
}

// Methods
service CartGrpcService {
    rpc FindCartsInIds(FindCartsInIdsReq) returns (FindCartsInIdsRes);
}